--- a/front/package.json
+++ b/front/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "mask": "^0.2.2",
     "material-icons": "^0.3.1",
-    "vue": "^2.6.11",
+    "the": "^1.0.2",
+    "vue": "^2.6.12",
+    "vue-the-mask": "^0.11.1",
     "vuesax": "^3.12.2"
   },
   "devDependencies": {
